Fixed: button splitting on smaller windows

--- a/Client/web-ui/src/components/Buttons/HeaderButton.module.scss
+++ b/Client/web-ui/src/components/Buttons/HeaderButton.module.scss
@@ -9,7 +9,6 @@
   background-color: $secondary-color;
   
   padding: 10px;
-  margin: 0 1vw;
 
   border-style: none;
   border-radius: 10px;
