--- a/Client/web-ui/src/components/Header/Header.module.scss
+++ b/Client/web-ui/src/components/Header/Header.module.scss
@@ -1,4 +1,6 @@
 @import "../../styles/globals.scss";
+@import "../Menu/Menu.module.scss";
+@import "../Buttons/HeaderButton.module.scss";
 
 .Header {
   @include blurring;
@@ -10,23 +12,17 @@
   min-height: 90px;
 
   display: grid;
-  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-columns: 1fr auto 1fr;
   grid-template-areas: "logo nav user";
   row-gap: 1vw;
 
   .HeaderLogo {
     grid-area: logo;
 
-    align-self: center;
-    justify-self: center;
+    place-self: center;
 
     img {
       max-height: 2vw;
-      align-self: center;
-      justify-self: center;
-    }
-
-    a {
       align-self: center;
       justify-self: center;
     }
@@ -37,12 +33,18 @@
     grid-area: nav;
 
     display: flex;
-    flex-flow: row;
+
     align-self: center;
     justify-self: flex-start;
     align-items: center;
     justify-items: flex-start;
     padding: 0vw 2vw;
+
+    li {
+      height: 100%;
+      min-width: fit-content;
+      margin: 0vw 1vw;
+    }
   }
 
   .HeaderAccount {
@@ -54,8 +56,7 @@
     display: flex;
     flex-direction: row;
 
-    align-self: center;
-    justify-self: center;
+    place-self: center;
 
     align-content: flex-start;
     justify-content: flex-start;
@@ -69,6 +70,11 @@
     }
   }
 
+  .MenuButton {
+    display: none;
+    grid-area: logo;
+  }
+
   ul {
     list-style-type: none;
     margin: 0;
@@ -80,4 +86,26 @@
   }
 
   z-index: 10;
+}
+
+@media screen and (max-width: 600px) {
+  .Header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "menu user";
+
+    .HeaderNav {
+      display: none;
+    }
+
+    .HeaderLogo {
+      display: none;
+    }
+  
+    .MenuButton {
+      display: flex;
+      content-visibility: visible;
+      grid-area: menu;
+    }
+  }
 }
